change some functionality

--- a/src/hypotenuse/hypotenuse.html
+++ b/src/hypotenuse/hypotenuse.html
@@ -24,10 +24,10 @@
         <div class="input-container">
             <!-- <div class="center"> -->
                 <h1 id="sub-heading">Calculate hypotenuse of a triangle</h1>
-                <label for="side-a" style=font-size:x-large>Enter Base value (a)=</label>
-                <input type="number" id="side-a"/>
-                <label for="side-b" style=font-size:x-large>Enter Height value (b)=</label>
-                <input id="side-b" type="number"/>
+                <label for="side-a" style=font-size:x-large>Enter Base value (a)=<input type="number" id="side-a" required/></label>
+                
+                <label for="side-b" style=font-size:x-large>Enter Height value (b)=<input id="side-b" type="number" required/></label>
+                
                 <button id="calculate-btn">Calculate hypotenuse</button>
                 <div id="message-box"><h1 id="message"></h1></div>
                 </div>
